<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:gravity="center" >

    <LinearLayout
        android:id="@+id/phonenumber_screen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/phonenumber_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dip"
            android:gravity="center"
            android:text="@string/phonenumber"
            android:textColor="@color/pink"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:gravity="center"
            android:text="@string/verifynumber_msg"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/phonecountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:background="@drawable/big_round_box" 
                android:layout_marginLeft="30dip"
                android:layout_marginRight="10dip" 
                android:padding="10dip" >
            
	            <ImageView
	                android:id="@+id/phonecountryimage"
	                android:layout_width="45dip"
	                android:layout_height="30dip"
	                android:layout_gravity="center"
	                android:gravity="center" />
	            
	            <ImageView
                    android:layout_gravity="center"
                    android:layout_width="8dip"
                    android:layout_height="wrap_content"
                    android:gravity="center" 
                    android:src="@drawable/arrowdown" />
	            	            
	        </LinearLayout>
            
            
	        <EditText
	            android:id="@+id/phonenumber"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"	            
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="30dip"
	            android:background="@color/light_gray"	            
	            android:inputType="phone"
	            android:maxLength="20"
	            android:padding="10dip"
	            android:textColor="@color/black"
	            android:textSize="24sp"
	            android:textStyle="bold"
	            android:layout_gravity="center"
                android:gravity="center" />
	    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >
	        <CheckBox
	            android:id="@+id/google_voice"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dip"
	            android:button="@drawable/checkbox"
	            android:gravity="center_vertical"
	            android:layout_gravity="center_vertical" />
	        <TextView 
	            android:id="@+id/google_voice_text"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:gravity="center_vertical"
	            android:layout_weight="1"
	            android:text="@string/is_google_voice"
	            android:textColor="@color/dark_gray"
	            android:textScaleX="0.9"
	            android:layout_marginLeft="-10dip"
	            android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/ok_phonenumer"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:layout_margin="20dip"
            android:background="@drawable/pink_round_box"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verifycode_screen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dip"
            android:gravity="center"
            android:text="@string/smscode_title"
            android:textColor="@color/pink"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:gravity="center"
            android:text="@string/smscode_msg"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/verification_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="@color/light_gray"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="20"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/resend_code"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_margin="20dip"
                android:background="@drawable/pink_round_box"
                android:gravity="center"
                android:text="@string/resend_verification_code"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ok_code"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_margin="20dip"
                android:background="@drawable/pink_round_box"
                android:gravity="center"
                android:text="@string/verifynumber"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>