<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:background="@drawable/device_background"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:contentDescription="@string/thumbnail"
        android:gravity="center"
        android:scaleType="centerInside" />

    <LinearLayout
        android:id="@+id/texts"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/device_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sub_text"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:textColor="@color/device_details"
            android:textSize="10sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="20dip"
        android:layout_height="20dip"
        android:layout_gravity="center"
        android:layout_marginRight="30dip"
        android:gravity="center"
        android:visibility="gone" />

    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="10dip"
        android:alpha="1"
        android:gravity="center"
        android:textOff="@string/buttonoff"
        android:textOn="@string/buttonon" />

    <ImageView
        android:id="@+id/error"
        android:layout_width="20dip"
        android:layout_height="20dip"
        android:layout_gravity="center"
        android:layout_marginRight="30dip"
        android:gravity="center"
        android:src="@drawable/error"
        android:visibility="gone" />

</LinearLayout>